examples/bad/02-ConcatenationWrongType.tms
void main () {
  
  string x = "xxx";
  boolean y = true;

  string xy = x +++ y;

  return;
}